--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -40,10 +40,9 @@
 	margin-top: .2em;
 }
 
-.fixed .column-consumer .title {
+.fixed .column-consumer strong {
 	display: block;
 	font-size: 14px;
-	font-weight: 600;
 	margin-bottom: .2em;
 }
 
