Orders: enable consumer type selection on order creation in the admin
In order to accomodate for two inputs for the Order's consumer, the
validation logic now accepts 'consumer_id' and 'consumer_type' next to the
'consumer' input paramter. These inputs are processed in the mentioned
order, prefering IDs over types over the generic 'consumer' input.

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -163,6 +163,17 @@ body.incassoos-post-view #postdivrich .inside {
 	width: 70%;
 }
 
+.incassoos-object-details label + .detail-wrapper select {
+	width: 100%;
+}
+
+.incassoos-object-details label + .detail-wrapper .separator {
+	display: block;
+	width: 100%;
+	padding: 4px 0px 6px;
+	text-align: center;
+}
+
 .incassoos-object-details .value span {
 	display: block;
 }
