--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -891,8 +891,8 @@ body.incassoos-post-view .incassoos-item-list .item-details li,
 	min-width: 130px;
 }
 
-#incassoos_dashboard_recent .recent-posts .post-total,
-#incassoos_dashboard_uncollected .recent-posts .post-total {
+#incassoos_dashboard_recent .recent-posts .post-detail,
+#incassoos_dashboard_uncollected .recent-posts .post-detail {
 	margin-left: 5px;
 	text-align: right;
 }
