Dashboard: change the icon for Orders to 'dashicons-food'

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -850,7 +850,7 @@ body.incassoos-post-view .incassoos-item-list .item-details li,
 }
 
 #incassoos_dashboard_status .order-count a:before {
-	content: '\f481'; /* dashicons-clipboard */
+	content: '\f187'; /* dashicons-food */
 }
 
 #incassoos_dashboard_status .product-count a:before {
